# distributed-kvstore

./: Cargo.toml  Makefile  README.md  build.rs
proto/: proto.proto  service_discovery.proto
src/: main.rs  processor.rs  server.rs  store.rs
src/service_discovery/: main.rs
